# lit-llama

./: .gitignore  .pre-commit-config.yaml  HOWTO.md  README-VALHALLA.md  README.md  adapt.py  compare.py  compare2.py  config.json  convert.py  count.py  data_lora.py  dataset.py  datasets  debug.py  demo.py  demo1.py  evaluate.py  evaluate_adapter.py  evaluate_full.py  evaluate_lora.py  extract_features.py  features-0.pt  finetune.py  finetune_8bit.py  finetune_adapter.py  finetune_full.py  finetune_lora.py  finetune_lora_dolly.py  finetune_quant.py  generate.py  generate_adapter.py  generate_full.py  generate_instr.py  generate_lora.py  instruct.py  load_data_apaca_lora.py  minimal_repro.py  model.py  names.py  (+13 more)
.github/: CODEOWNERS  azure-gpu-tests.yml  markdown.links.config.json
docs/: finetune_adapter.md  finetune_lora.md  inference.md  lora.md
evaluate/: adapter.py  adapter_v2.py  eval_harness.py  full.py  lora.py
finetune/: adapter.py  adapter_v2.py  adapter_v2_image_caption.py  adapter_v2_llava.py  adapter_v2_multi_modal.py  adapter_v2_old.py  finetune_lora_dolly.py  full.py  length_grouped_sampler.py  lora.py  vision_transformer.py
generate/: README.md  adapter.py  adapter_v2.py  adapter_v2_llava.py  adapter_v2_multi_modal.py  evaluation.py  full.py  generate_utils.py  lora.py  lora_predictions.py
gptq/: README.md  convert_llama_weights_to_hf.py  datautils.py  llama.py  opt.py  quant.py
howto/: adapter.md  convert_lora_weights.md  customize_paths.md  download_weights.md  finetune_adapter.md  finetune_adapter_v2.md  finetune_full.md  finetune_lora.md  inference.md  lora.md  tpus.md  train_redpajama.md  unstructured_dataset.md
lightning_llama.egg-info/: PKG-INFO  SOURCES.txt
lit_llama/: __init__.py  adapter.py  adapter_v2.py  adapter_v2_multi_modal.py  indexed_dataset.py  lora.py  lora_old.py  model.py  packed_dataset.py  quantization.py  sparsification.py  tokenizer.py  utils.py
llama/: model.py
models/: llama.py
mt/: README.md  dev-translate.ipynb  eval_translation.py  translate.py  wmt_to_prompt_csv.py
pretrain/: redpajama.py  shakespeare.py
quantization/: better_bnb.py  bnb.py
quantize/: gptq.py
(+88 files in other folders)
